# ChangeLog for dev-python/ipa-python
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  21 Oct 2009; A. Vinogradov <spamslepnoga@inbox.ru>
  +ipa-python-1.2.2.ebuild:
  version bump

  29 Aug 2009; A. Vinogradov <spamslepnoga@inbox.ru>
  +ipa-python-1.2.1.ebuild, +metadata.xml:
  initial recommit in my dev overlay
