@@ -1,6 +1,10 @@
 # ChangeLog for dev-python/ipa-python
-# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
+# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
+
+  01 Feb 2010; A. Vinogradov <spamslepnoga@inbox.ru>
+  +ipa-python-1.9.0_pre1.ebuild:
+  add new version
 
   21 Oct 2009; A. Vinogradov <spamslepnoga@inbox.ru>
   +ipa-python-1.2.2.ebuild:
